--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
       <p><i class="bi bi-telephone-fill me-2"></i>+62 813-4230-9094</p>
       
       <div class="mt-3">
-        <a href="https://linkedin.com/in/hastomo" class="text-white d-block mb-1 text-decoration-none" target="_blank">
+        <a href="#" class="text-white d-block mb-1 text-decoration-none" target="_blank">
           <i class="bi bi-linkedin me-2"></i>linkedin.com/in/hastomo
         </a>
-        <a href="https://facebook.com/hastomo" class="text-white d-block mb-1 text-decoration-none" target="_blank">
+        <a href="#" class="text-white d-block mb-1 text-decoration-none" target="_blank">
           <i class="bi bi-facebook me-2"></i>facebook.com/hastomo
         </a>
-        <a href="https://instagram.com/hastomo155" class="text-white d-block text-decoration-none" target="_blank">
+        <a href="#" class="text-white d-block text-decoration-none" target="_blank">
           <i class="bi bi-instagram me-2"></i>instagram.com/hastomo
         </a>
       </div>
