--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         <span class="badge-skill">Corel Draw</span>
         <span class="badge-skill">Photoshop</span>
         <span class="badge-skill">Canva</span>
+         <span class="badge-skill">Filmora</span>
       </div>
       
 
